# desmosify

./: .gitignore  Cargo.toml  desmosify.lang
bookmarklets/: export_graph.js  import_graph.js
src/: goal.txt  main.rs
src/desmosify/: cli.rs  display.rs  lib.rs  mod.rs  semantics.rs  syntax.rs  token.rs
src/desmosify-test/: main.rs  maze.desmos  out.json  stratego-download.json  stratego.desmos  test.desmos
