[package]
name = "desmosify-test"
version = "0.1.0"
authors = ["xarkenz"]
edition = "2021"

[lib]
name = "desmosify"
path = "src/desmosify/lib.rs"

[[bin]]
name = "desmosify-test"
path = "src/desmosify-test/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
