[package]
name = "desmosify"
version = "0.1.0"
authors = ["xarkenz"]
edition = "2021"
default-run = "desmosify-test"

[lib]
name = "desmosify"
path = "src/desmosify/lib.rs"

[[bin]]
name = "desmosify-test"
path = "src/desmosify-test/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
json = "0.12.4"
